EDIT(TEST) Modification des tests pour tester nouveau DTO et modification de l'entité